# string-metrics

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
python/string_metrics/: __init__.py  __init__.pyi
python/text_string_metrics/: __init__.py  __init__.pyi
src/: distance.rs  lib.rs
tests/: test_distance.py
