[project]
name = "text-string-metrics"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
